fix whitespace at bottom

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,1 @@
-.masthead {
-  height: 100%;
-}
-
 /*# sourceMappingURL=main.css.map */
